--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-  <nav class=" navbar navbar-expand-lg navbar-light bg-light ">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="shadow-sm p-3 mb-5 bg-body rounded container-fluid">
       <h1><a class="navbar-brand" href="#"><img src="img/Logo.png" class="logo"></a></h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +182,7 @@
   </div>
 </section>
 <section class="maps">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.2700134583724!2d-75.60397688529413!3d6.228088128255006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429eb378c804f%3A0x17a2e3ad2525f5f5!2sCentro%20de%20Ense%C3%B1anza%20Automovil%C3%ADstica%20Conducimos!5e0!3m2!1ses!2sco!4v1634242663983!5m2!1ses!2sco" width="1920" height="700" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.2700134583724!2d-75.60397688529413!3d6.228088128255006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429eb378c804f%3A0x17a2e3ad2525f5f5!2sCentro%20de%20Ense%C3%B1anza%20Automovil%C3%ADstica%20Conducimos!5e0!3m2!1ses!2sco!4v1634242663983!5m2!1ses!2sco" width="100%" height="650px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </section>
 <footer class="color">
   <div class="container">
