--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="img/A1 info.png" class="card-img-top" alt="...">
+        <img src="img/A1 info.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción A1.</h4>
           <p class="card-text">El servicio de licencia de conducción categoría A1 (moto hasta 125cc) te permite conducir 
@@ -94,7 +94,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/A2 INFO.png" class="card-img-top" alt="...">
+        <img src="img/A2 INFO.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción A2.</h4>
           <p class="card-text">El servicio de licencia de conducción categoría A2 te permite conducir 
@@ -110,7 +110,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/b1 INFO.png" class="card-img-top" alt="...">
+        <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción B1.</h4>
           <p class="card-text">Te permite manejar automóviles, 
@@ -131,7 +131,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="img/C1 info.png" class="card-img-top" alt="...">
+        <img src="img/C1 info.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción C1</h4>
           <p class="card-text">La licencia de conducción categoría C1 te permite conducir automóviles, motocarros, cuatrimotos, 
@@ -147,7 +147,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/CONDUMEDICOS.png" class="card-img-top" alt="...">
+        <img src="img/CONDUMEDICOS.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Renovación de licencia</h4>
           <p class="card-text">El servicio de renovación de licencia de conducción tiene un costo total de $220.000 incluye 
@@ -164,7 +164,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/b1 INFO.png" class="card-img-top" alt="...">
+        <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción</h4>
           <p class="card-text">La licencia de conducción categoría B1 (carro particular) te permite manejar automóviles, 
