--- a/A2.html
+++ b/A2.html
@@ -16,7 +16,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="shadow-sm p-3 mb-5 bg-body rounded container-fluid">
-      <h1><a class="navbar-brand" href="#"><img src="img/Logo.png" class="logo"></a></h1>
+      <h1><a class="navbar-brand" href="index.html"><img src="img/Logo.png" class="logo"></a></h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
