--- a/C1.html
+++ b/C1.html
@@ -50,19 +50,19 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/A2 INFO.png" class="img-fluid rounded-start" alt="...">
+            <img src="img/C1 info.png" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Licencias de conducción A2.</h5>
-              <p class="card-text">Es necesario para este proceso saber leer y escribir, tener 16 o más años, documento de identidad
+              <h5 class="card-title">Licencias de conducción C1.</h5>
+              <p class="card-text">Es necesario para este proceso saber leer y escribir, tener 18 años, documento de identidad
                 original, una foto tamaño 3x4, estar inscrito(a) en el registro único nacional de tránsito RUNT, puedes 
                 consultar la inscripción en este link https://www.runt.com.co/consultaCiudadana/#/consultaPersona; 
                 en caso de no estar inscrito(a) lo puedes hacer a través nuestro con un pago de $20.000 adicionales.</p>
                 <p class="card-text">Nuestros horarios para clases teóricas son:
                   Lunes a viernes: 8:00 am hasta las 12:00 m
                   Lunes a viernes: 18:00 hasta las 22:00.
-                  Las clases teóricas son 25 más 3 clases de taller, lo realizas en 8 días.</p>
+                  Las clases teóricas son 30 más 5 clases de taller, lo realizas en 9 días.</p>
                   <p class="card-text">Nuestros horarios para clases prácticas son:
                     Lunes a viernes: 6:00 am, 8:00 am, 10:00 am, 14:00, 16:00 y 18:00.
                     Sábados 6:00 am, 8:00 am, 10:00 am, y 12:00 m
