--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             tiene un costo total de $1.140.000 incluye todo el proceso de formación, exámenes médicos y la 
             impresión de la licencia de conducción.
             </p>
-          <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="B1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-          </svg></button>
+          </svg></a>
         </div>
       </div>
     </div>
@@ -137,6 +137,60 @@
             camperos, camionetas y microbuses de servicio público (placa blanca). Tiene un costo total de $1.375.000 incluye 
             todo el proceso de formación, exámenes médicos y la impresión de la licencia de conducción.
             </p>
+          <a href="C1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+          </svg></a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="img/CONDUMEDICOS.png" class="border card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Renovación de licencia</h4>
+          <p class="card-text">El servicio de renovación de licencia de conducción tiene un costo total de $220.000 incluye 
+            exámenes médicos y la impresión de la licencia de conducción. Los exámenes médicos son de 
+            órganos y sentidos, es decir, visión, audición, motricidad, psicología y medicina general.
+            Se entrega la licencia impresa a más tardar al siguiente día 
+            hábil.</p>
+          <a href="renovaciones.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+          </svg></a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Licencias de conducción</h4>
+          <p class="card-text">La licencia de conducción categoría B1 (carro particular) te permite manejar automóviles, 
+            motocarros, cuatrimotos, camperos, camionetas y microbuses de servicio particular (placa amarilla) 
+            tiene un costo total de $1.140.000 incluye todo el proceso de formación, exámenes médicos y la 
+            impresión de la licencia de conducción.
+            </p>
+          <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+          </svg></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="servicios2">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="img/OTROS SERVICIOS.png" class="border card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Licencias de conducción C1</h4>
+          <p class="card-text">La licencia de conducción categoría C1 te permite conducir automóviles, motocarros, cuatrimotos, 
+            camperos, camionetas y microbuses de servicio público (placa blanca). Tiene un costo total de $1.375.000 incluye 
+            todo el proceso de formación, exámenes médicos y la impresión de la licencia de conducción.
+            </p>
           <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
@@ -146,7 +200,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/CONDUMEDICOS.png" class="border card-img-top" alt="...">
+        <img src="img/certificamos.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Renovación de licencia</h4>
           <p class="card-text">El servicio de renovación de licencia de conducción tiene un costo total de $220.000 incluye 
@@ -163,7 +217,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
+        <img src="img/aliados.png" class="border card-img-top" alt="...">
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción</h4>
           <p class="card-text">La licencia de conducción categoría B1 (carro particular) te permite manejar automóviles, 
