--- a/renovaciones.html
+++ b/renovaciones.html
@@ -50,26 +50,26 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/A2 INFO.png" class="img-fluid rounded-start" alt="...">
+            <img src="img/CONDUMEDICOS.png" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Licencias de conducción A2.</h5>
-              <p class="card-text">Es necesario para este proceso saber leer y escribir, tener 16 o más años, documento de identidad
-                original, una foto tamaño 3x4, estar inscrito(a) en el registro único nacional de tránsito RUNT, puedes 
-                consultar la inscripción en este link https://www.runt.com.co/consultaCiudadana/#/consultaPersona; 
-                en caso de no estar inscrito(a) lo puedes hacer a través nuestro con un pago de $20.000 adicionales.</p>
-                <p class="card-text">Nuestros horarios para clases teóricas son:
-                  Lunes a viernes: 8:00 am hasta las 12:00 m
-                  Lunes a viernes: 18:00 hasta las 22:00.
-                  Las clases teóricas son 25 más 3 clases de taller, lo realizas en 8 días.</p>
-                  <p class="card-text">Nuestros horarios para clases prácticas son:
-                    Lunes a viernes: 6:00 am, 8:00 am, 10:00 am, 14:00, 16:00 y 18:00.
-                    Sábados 6:00 am, 8:00 am, 10:00 am, y 12:00 m
-                    Las clases prácticas son 15, lo realizas en 8 días.</p>
-                    <p class="card-text">El día de la matrícula se agendan las clases teóricas y prácticas en nuestra sede ubicada en la CR 
-                      81 # 26-40 barrio Belén la Palma, (diagonal al consumo). Atendemos de lunes a viernes de 8:00 am 
-                      hasta las 18:00 y los sábados de 8:00 am hasta las 13:00.</p>
+              <h5 class="card-title">Renovaciones.</h5>
+                <p class="card-text">El servicio de renovación de licencia de conducción tiene un costo total de $220.000 incluye 
+                    exámenes médicos y la impresión de la licencia de conducción. Los exámenes médicos son de 
+                    órganos y sentidos, es decir, visión, audición, motricidad, psicología y medicina general.
+                    El proceso se tarda máximo una hora y se entrega la licencia impresa a más tardar al siguiente día 
+                    hábil. 
+                  Las clases teóricas son 30 más 5 clases de taller, lo realizas en 9 días.</p>
+                  <p class="card-text">Es necesario para este proceso estar paz y salvo en el tránsito, en caso de tener alguna infracción 
+                    estar en estado acuerdo de pago, documento de identidad original, estar inscrito en el registro único 
+                    nacional de tránsito RUNT, puedes consultar la inscripción en este link 
+                    https://www.runt.com.co/consultaCiudadana/#/consultaPersona; en caso de no estar inscrito(a) lo 
+                    puedes hacer a través nuestro con un pago adicional de $20.000</p>
+                    <p class="card-text">Nuestra sede ubicada en el centro comercial Punto Clave local 261, Condumédicos, Cl 27 # 46-70, 
+                        anexo a la estación industriales del metro. Atendemos de lunes a viernes de 8:00 am hasta las 12:00
+                        m y de 14:00 hasta las 17:00, los sábados de 8:00 am hasta las 11:00am.
+                        </p>
               <button type="button" class="btn btn-outline-dark">RECERVA<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
               </svg></button>
