--- a/B1.html
+++ b/B1.html
@@ -50,11 +50,11 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/A2 INFO.png" class="img-fluid rounded-start" alt="...">
+            <img src="img/b1 INFO.png" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Licencias de conducción A2.</h5>
+              <h5 class="card-title">Licencias de conducción B1.</h5>
               <p class="card-text">Es necesario para este proceso saber leer y escribir, tener 16 o más años, documento de identidad
                 original, una foto tamaño 3x4, estar inscrito(a) en el registro único nacional de tránsito RUNT, puedes 
                 consultar la inscripción en este link https://www.runt.com.co/consultaCiudadana/#/consultaPersona; 
@@ -62,7 +62,7 @@
                 <p class="card-text">Nuestros horarios para clases teóricas son:
                   Lunes a viernes: 8:00 am hasta las 12:00 m
                   Lunes a viernes: 18:00 hasta las 22:00.
-                  Las clases teóricas son 25 más 3 clases de taller, lo realizas en 8 días.</p>
+                  Las clases teóricas son 25 más 5 clases de taller, lo realizas en 8 días.</p>
                   <p class="card-text">Nuestros horarios para clases prácticas son:
                     Lunes a viernes: 6:00 am, 8:00 am, 10:00 am, 14:00, 16:00 y 18:00.
                     Sábados 6:00 am, 8:00 am, 10:00 am, y 12:00 m
