--- a/renovaciones.html
+++ b/renovaciones.html
@@ -70,7 +70,7 @@
                         anexo a la estación industriales del metro. Atendemos de lunes a viernes de 8:00 am hasta las 12:00
                         m y de 14:00 hasta las 17:00, los sábados de 8:00 am hasta las 11:00am.
                         </p>
-                        <a href="https://api.whatsapp.com/send?phone=573174416271&text=Hola%2C%20necesito%20informaci%C3%B3n." type="button" class="btn btn-outline-dark">RECERVA<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                        <a href="https://api.whatsapp.com/send?phone=573174416271&text=Hola%2C%20necesito%20informaci%C3%B3n." type="button" class="btn btn-outline-dark">RESERVAR<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                           </svg></a>
               <a href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=8624" type="button" class="btn btn-outline-dark">COMPRAR<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
