--- a/renovaciones.html
+++ b/renovaciones.html
@@ -24,7 +24,7 @@
         <ul class="navbar-nav">
           <li>
             <select class="btn btn-outline-dark" name="" id="">
-              <option value=""><a class="nav-link active" aria-current="page" href="#">INICIO</a></option>
+              <option value=""><a class="nav-link active" aria-current="page" href="index.html">INICIO</a></option>
               <option value="">Cursos</option>
               <option value="">Vehículos</option>
               <option value="">Mapa</option>
@@ -36,7 +36,7 @@
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">VEHÍCULOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">NUESTRA EMPRESA</a>
+            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">CONTÁCTENOS</a>
