--- a/C1.html
+++ b/C1.html
@@ -13,39 +13,42 @@
 <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="shadow-sm p-3 mb-5 bg-body rounded container-fluid">
-      <h1><a class="navbar-brand" href="index.html"><img src="img/Logo.png" class="logo"></a></h1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="flex-row-reverse bd-highlight collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li>
-            <select class="btn btn-outline-dark" name="" id="">
-              <option value=""><a class="nav-link active" aria-current="page" href="index.html">INICIO</a></option>
-              <option value="">Cursos</option>
-              <option value="">Vehículos</option>
-              <option value="">Mapa</option>
-              <option value="">Licencia de moto</option>
-              <option value="">Licencia de carro</option>
-            </select>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">VEHÍCULOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">CONTÁCTENOS</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="shadow-sm p-3 mb-5 bg-body rounded container-fluid">
+        <h1><a class="navbar-brand" href="index.html"><img src="img/Logo.png" class="logo"></a></h1>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="flex-row-reverse bd-highlight collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="lent nav-item dropdown">
+              <a class="btn btn-outline-dark nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                INICIO
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="index.html">Inicio</a></li>
+                <li><a class="dropdown-item" href="#">Cursos</a></li>
+                <li><a class="dropdown-item" href="#">Vehículos</a></li>
+                <li><a class="dropdown-item" href="#">Licencia de moto</a></li>
+                <li><a class="dropdown-item" href="#">Licencia de carro</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Dirección</a></li>
+              </ul>
+            <li class="nav-item">
+              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">VEHÍCULOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">CONTÁCTENOS</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 <section>
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
