--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
       </button>
       <div class="flex-row-reverse bd-highlight collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li>
-            <select class="btn btn-outline-dark" name="" id="">
-              <option value=""><a class="nav-link active" aria-current="page" href="index.html">INICIO</a></option>
-              <option value="">Cursos</option>
-              <option value="">Vehículos</option>
-              <option value="">Mapa</option>
-              <option value="">Licencia de moto</option>
-              <option value="">Licencia de carro</option>
-            </select>
-          </li>
+          <li class="lent nav-item dropdown">
+            <a class="btn btn-outline-dark nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              INICIO
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+              <li><a class="dropdown-item" href="index.html">Inicio</a></li>
+              <li><a class="dropdown-item" href="#">Cursos</a></li>
+              <li><a class="dropdown-item" href="#">Vehículos</a></li>
+              <li><a class="dropdown-item" href="#">Licencia de moto</a></li>
+              <li><a class="dropdown-item" href="#">Licencia de carro</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Dirección</a></li>
+            </ul>
           <li class="nav-item">
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">VEHÍCULOS</a>
           </li>
@@ -77,7 +80,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="img/A1 info.png" class="border card-img-top" alt="...">
+        <a href=""><img src="img/A1 info.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción A1.</h4>
           <p class="card-text">El servicio de licencia de conducción categoría A1 (moto hasta 125cc) te permite conducir 
@@ -93,7 +96,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/A2 INFO.png" class="border card-img-top" alt="...">
+        <a href="A2.html"><img src="img/A2 INFO.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción A2.</h4>
           <p class="card-text">El servicio de licencia de conducción categoría A2 te permite conducir 
@@ -109,7 +112,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
+        <a href="B1.html"><img src="img/b1 INFO.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción B1.</h4>
           <p class="card-text">Te permite manejar automóviles, 
@@ -130,7 +133,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="img/C1 info.png" class="border card-img-top" alt="...">
+        <a href="C1.html"><img src="img/C1 info.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Licencias de conducción C1</h4>
           <p class="card-text">La licencia de conducción categoría C1 te permite conducir automóviles, motocarros, cuatrimotos, 
@@ -146,7 +149,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/CONDUMEDICOS.png" class="border card-img-top" alt="...">
+        <a href="renovaciones.html"><img src="img/CONDUMEDICOS.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Renovación de licencia</h4>
           <p class="card-text">El servicio de renovación de licencia de conducción tiene un costo total de $220.000 incluye 
