--- a/empresa.html
+++ b/empresa.html
@@ -82,9 +82,9 @@
     <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
               <div class="cen">
-                <span class="redes"><img class="logo1" src="img/instagram.png" alt=""></span>
-               <span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span>
-               <span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span>
+               <a href="https://www.instagram.com/cea_conducimos/"><span class="redes"><img class="logo1" src="img/instagram.png" alt=""></span></a>
+               <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
+               <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
                <h4 class="copy">© 2014 conducimos.com.co. Politica de privacidad | Términos y condiciones
               </h4>
