--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
+        <h4 class="card-title">Curso de conducción A1.</h4>
         <a href=""><img src="img/A1 info.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
-          <h4 class="card-title">Licencias de conducción A1.</h4>
           <p class="card-text">El servicio de licencia de conducción categoría A1 (moto hasta 125cc) te permite conducir 
             motocicletas de bajo cilindraje, tiene un costo total de $755.000 incluye todo el proceso de 
             formación, exámenes médicos y la impresión de la licencia de conducción.
@@ -96,9 +96,9 @@
     </div>
     <div class="col">
       <div class="card h-100">
+        <h4 class="card-title">Curso de conducción A2.</h4>
         <a href="A2.html"><img src="img/A2 INFO.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
-          <h4 class="card-title">Licencias de conducción A2.</h4>
           <p class="card-text">El servicio de licencia de conducción categoría A2 te permite conducir 
             motocicletas de alto y bajo cilindraje, tiene un costo total de $895.000 incluye todo el proceso de 
             formación, exámenes médicos y la impresión de la licencia de conducción.
@@ -112,9 +112,9 @@
     </div>
     <div class="col">
       <div class="card h-100">
+        <h4 class="card-title">Curso de conducción B1.</h4>
         <a href="B1.html"><img src="img/b1 INFO.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
-          <h4 class="card-title">Licencias de conducción B1.</h4>
           <p class="card-text">Te permite manejar automóviles, 
             motocarros, cuatrimotos, camperos, camionetas y microbuses de servicio particular 
             tiene un costo total de $1.140.000 incluye todo el proceso de formación, exámenes médicos y la 
@@ -133,9 +133,9 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
+        <h4 class="card-title">Curso de conducción C1.</h4>
         <a href="C1.html"><img src="img/C1 info.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
-          <h4 class="card-title">Licencias de conducción C1</h4>
           <p class="card-text">La licencia de conducción categoría C1 te permite conducir automóviles, motocarros, cuatrimotos, 
             camperos, camionetas y microbuses de servicio público (placa blanca). Tiene un costo total de $1.375.000 incluye 
             todo el proceso de formación, exámenes médicos y la impresión de la licencia de conducción.
@@ -149,9 +149,9 @@
     </div>
     <div class="col">
       <div class="card h-100">
+        <h4 class="card-title">Renovación de licencia.</h4>
         <a href="renovaciones.html"><img src="img/CONDUMEDICOS.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
-          <h4 class="card-title">Renovación de licencia</h4>
           <p class="card-text">El servicio de renovación de licencia de conducción tiene un costo total de $220.000 incluye 
             exámenes médicos y la impresión de la licencia de conducción. Los exámenes médicos son de 
             órganos y sentidos, es decir, visión, audición, motricidad, psicología y medicina general.
@@ -166,9 +166,9 @@
     </div>
     <div class="col">
       <div class="card h-100">
+        <h4 class="card-title">Asesorias juridicas.</h4>
         <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
         <div class="card-body">
-          <h4 class="card-title">Licencias de conducción</h4>
           <p class="card-text">La licencia de conducción categoría B1 (carro particular) te permite manejar automóviles, 
             motocarros, cuatrimotos, camperos, camionetas y microbuses de servicio particular (placa amarilla) 
             tiene un costo total de $1.140.000 incluye todo el proceso de formación, exámenes médicos y la 
@@ -245,12 +245,11 @@
     <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
               <div class="cen">
-                <span class="redes"><img class="logo1" src="img/instagram.png" alt=""></span>
-               <span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span>
-               <span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span>
+               <a href="https://www.instagram.com/cea_conducimos/"><span class="redes"><img class="logo1" src="img/instagram.png" alt=""></span></a>
+               <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
+               <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
-               <h4 class="copy">© 2014 conducimos.com.co. Politica de privacidad | Términos y condiciones
-              </h4>
+               <h4 class="copy">© 2014 conducimos.com.co. Politica de privacidad | Términos y condiciones</h4>
              </div>
              <div class="col">
               <div class=" desc-box">
