--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">CONTÁCTENOS</a>
+            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="CONTACTENOS.html">CONTÁCTENOS</a>
           </li>
         </ul>
       </div>
