--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
               <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-              <li><a class="dropdown-item" href="#">Cursos</a></li>
               <li><a class="dropdown-item" href="#">Vehículos</a></li>
-              <li><a class="dropdown-item" href="#">Licencia de moto</a></li>
-              <li><a class="dropdown-item" href="#">Licencia de carro</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Dirección</a></li>
+              <li><a class="dropdown-item" href="CONTACTENOS.html">Dirección</a></li>
             </ul>
           <li class="nav-item">
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">VEHÍCULOS</a>
@@ -78,7 +75,7 @@
     </button>
   </div>
 </header>
-<section class="servicios">
+<section id="sercicios" class="servicios">
   <h2>SERVICIOS.</h2>
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
@@ -170,7 +167,7 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Asesorias juridicas.</h4>
-        <img src="img/b1 INFO.png" class="border card-img-top" alt="...">
+        <img src="img/asesoria.jpg" class="border card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Asesoria y acompañamiento integral en asuntos contravencionales y de responsabilidad civil.
             </p>
