--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
                <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
-               <h4 class="copy">© 2014 conducimos.com.co. Politica de privacidad | Términos y condiciones</h4>
+               <h4 class="copy">© 2014 conducimos.com.co. <br> <a href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
              </div>
              <div class="col">
               <div class=" desc-box">
