--- a/A2.html
+++ b/A2.html
@@ -23,13 +23,13 @@
         <div class="flex-row-reverse bd-highlight collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="lent nav-item dropdown">
-              <a class="btn btn-outline-dark nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="btn btn-outline-dark nav-link dropdown-toggle" href="vehiculos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 INICIO
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                 <li><a class="dropdown-item" href="index.html">Inicio</a></li>
                 <li><a class="dropdown-item" href="#">Cursos</a></li>
-                <li><a class="dropdown-item" href="#">Vehículos</a></li>
+                <li><a class="dropdown-item" href="vehiculos.html">Vehículos</a></li>
                 <li><a class="dropdown-item" href="#">Licencia de moto</a></li>
                 <li><a class="dropdown-item" href="#">Licencia de carro</a></li>
                 <li><hr class="dropdown-divider"></li>
