--- a/B1.html
+++ b/B1.html
@@ -29,14 +29,14 @@
               <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                 <li><a class="dropdown-item" href="index.html">Inicio</a></li>
                 <li><a class="dropdown-item" href="#">Cursos</a></li>
-                <li><a class="dropdown-item" href="#">Vehículos</a></li>
+                <li><a class="dropdown-item" href="vehiculos.html">Vehículos</a></li>
                 <li><a class="dropdown-item" href="#">Licencia de moto</a></li>
                 <li><a class="dropdown-item" href="#">Licencia de carro</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Dirección</a></li>
               </ul>
             <li class="nav-item">
-              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">VEHÍCULOS</a>
+              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="vehiculos.html">VEHÍCULOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
