--- a/empresa.html
+++ b/empresa.html
@@ -55,21 +55,18 @@
 <section>
     <div class="card-group">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nuestra empresa.</h5>
             <p class="card-text">El CENTRO DE ENSEÑANZA AUTOVOMILÍSTICA CONDUCIMOS es una empresa catalogada como un Instituto para el Trabajo y Desarrollo Humano que fue fundada en el año 2013, con el objeto de formar conductores responsables, además de contribuir a que haya una sociedad mas capacitada, con alto grado de conciencia y tolerancia en las vías de Colombia.</p>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Misión.</h5>
             <p class="card-text">Somos una Institución de servicio público educativo de carácter privado, que cumple una función social que pretende dar respuesta a las necesidades de formación para el trabajo a través de programas de alta pertinencia social y con fundamento en la responsabilidad, la calidad, la eficiencia y la integralidad de la formación que propicie el desarrollo humano de los habitantes de la ciudad, el departamento y el país.</p>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Visión.</h5>
             <p class="card-text">Para el 2023 será reconocida por su alto nivel de servicio, la calidad en el contenido y ejecución de los programas ofrecidos que busca contribuir al progreso social, económico, y cultural del país, mediante el desarrollo de programas de formación para el trabajo y desarrollo humano de excelencia académica, formando personas competentes, en interacción permanente con los sectores empresarial y gubernamental.</p>
@@ -89,7 +86,7 @@
                <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
                <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
-               <h4 class="copy">© 2014 conducimos.com.co. Politica de privacidad | Términos y condiciones</h4>
+              <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
              </div>
              <div class="col">
               <div class=" desc-box">
