--- a/renovaciones.html
+++ b/renovaciones.html
@@ -56,7 +56,7 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/CONDUMEDICOS.png" class="img-fluid rounded-start" alt="...">
+            <img src="img/CONDUMEDICOS.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -70,7 +70,7 @@
                   <p class="card-text">Es necesario para este proceso estar paz y salvo en el tránsito, en caso de tener alguna infracción 
                     estar en estado acuerdo de pago, documento de identidad original, estar inscrito en el registro único 
                     nacional de tránsito RUNT, puedes consultar la inscripción en este link 
-                    https://www.runt.com.co/consultaCiudadana/#/consultaPersona; en caso de no estar inscrito(a) lo 
+                    <a target="_blank" href="https://www.runt.com.co/consultaCiudadana/#/consultaPersona">https://www.runt.com.co/consultaCiudadana/#/consultaPersona</a>; en caso de no estar inscrito(a) lo 
                     puedes hacer a través nuestro con un pago adicional de $20.000</p>
                     <p class="card-text">Nuestra sede ubicada en el centro comercial Punto Clave local 261, Condumédicos, Cl 27 # 46-70, 
                         anexo a la estación industriales del metro. Atendemos de lunes a viernes de 8:00 am hasta las 12:00
@@ -102,7 +102,7 @@
                <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
                <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
-               <h4 class="copy">© 2014 conducimos.com.co. Politica de privacidad | Términos y condiciones</h4>
+              <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
              </div>
              <div class="col">
               <div class=" desc-box">
