--- a/A1.html
+++ b/A1.html
@@ -23,7 +23,7 @@
         <div class="flex-row-reverse bd-highlight collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="lent nav-item dropdown">
-              <a class="btn btn-outline-dark nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="btn btn-outline-dark nav-link dropdown-toggle" href="vehiculos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 INICIO
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
@@ -36,7 +36,7 @@
                 <li><a class="dropdown-item" href="#">Dirección</a></li>
               </ul>
             <li class="nav-item">
-              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="vehiculos.html">VEHÍCULOS</a>
+              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="#">VEHÍCULOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
@@ -56,29 +56,29 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/C1.jpg" class="img-fluid rounded-start" alt="...">
+            <img src="img/A1.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Licencias de conducción C1.</h5>
-              <p class="card-text">Es necesario para este proceso saber leer y escribir, tener 18 años, documento de identidad
+              <h5 class="card-title">Licencias de conducción A1.</h5>
+              <p class="card-text">Es necesario para este proceso saber leer y escribir, tener 16 o más años, documento de identidad
                 original, una foto tamaño 3x4, estar inscrito(a) en el registro único nacional de tránsito RUNT, puedes 
                 consultar la inscripción en este link <a target="_blank" href="https://www.runt.com.co/consultaCiudadana/#/consultaPersona">https://www.runt.com.co/consultaCiudadana/#/consultaPersona</a>; 
                 en caso de no estar inscrito(a) lo puedes hacer a través nuestro con un pago de $20.000 adicionales.</p>
                 <p class="card-text">Nuestros horarios para clases teóricas son:
                   Lunes a viernes: 8:00 am hasta las 12:00 m
                   Lunes a viernes: 18:00 hasta las 22:00.
-                  Las clases teóricas son 30 más 5 clases de taller, lo realizas en 9 días.</p>
+                  Las clases teóricas son 25 más 3 clases de taller, lo realizas en 8 días.</p>
                   <p class="card-text">Nuestros horarios para clases prácticas son:
                     Lunes a viernes: 6:00 am, 8:00 am, 10:00 am, 14:00, 16:00 y 18:00.
                     Sábados 6:00 am, 8:00 am, 10:00 am, y 12:00 m
-                    Las clases prácticas son 15, lo realizas en 8 días.</p>
+                    Las clases prácticas son 4, lo realizas en 8 días.</p>
                     <p class="card-text">El día de la matrícula se agendan las clases teóricas y prácticas en nuestra sede ubicada en la CR 
                       81 # 26-40 barrio Belén la Palma, (diagonal al consumo). Atendemos de lunes a viernes de 8:00 am 
                       hasta las 18:00 y los sábados de 8:00 am hasta las 13:00.</p>
-                      <a href="https://api.whatsapp.com/send?phone=573174416271&text=Hola%2C%20necesito%20informaci%C3%B3n." type="button" class="btn btn-outline-dark">RESERVAR<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                      </svg></a>
+              <a href="https://api.whatsapp.com/send?phone=573174416271&text=Hola%2C%20necesito%20informaci%C3%B3n." type="button" class="btn btn-outline-dark">RESERVAR<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+              </svg></a>
               <a href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=8624" type="button" class="btn btn-outline-dark">COMPRAR<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"/>
                 <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"/>
