--- a/A2.html
+++ b/A2.html
@@ -56,14 +56,14 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/A2 INFO.png" class="img-fluid rounded-start" alt="...">
+            <img src="img/A2.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">Licencias de conducción A2.</h5>
               <p class="card-text">Es necesario para este proceso saber leer y escribir, tener 16 o más años, documento de identidad
                 original, una foto tamaño 3x4, estar inscrito(a) en el registro único nacional de tránsito RUNT, puedes 
-                consultar la inscripción en este link https://www.runt.com.co/consultaCiudadana/#/consultaPersona; 
+                consultar la inscripción en este link <a target="_blank" href="https://www.runt.com.co/consultaCiudadana/#/consultaPersona">https://www.runt.com.co/consultaCiudadana/#/consultaPersona</a>; 
                 en caso de no estar inscrito(a) lo puedes hacer a través nuestro con un pago de $20.000 adicionales.</p>
                 <p class="card-text">Nuestros horarios para clases teóricas son:
                   Lunes a viernes: 8:00 am hasta las 12:00 m
@@ -102,7 +102,7 @@
                <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
                <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
-               <h4 class="copy">© 2014 conducimos.com.co. Politica de privacidad | Términos y condiciones</h4>
+              <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
              </div>
              <div class="col">
               <div class=" desc-box">
