--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Curso de conducción A1.</h4>
-        <a href=""><img src="img/A1 info.png" class="border card-img-top" alt="..."></a>
+        <a href="A1.html"><img src="img/A1.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">El servicio de licencia de conducción categoría A1 (moto hasta 125cc) te permite conducir 
             motocicletas de bajo cilindraje, tiene un costo total de $755.000 incluye todo el proceso de 
             formación, exámenes médicos y la impresión de la licencia de conducción.
             </p>
-          <a href="" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="A1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -97,7 +97,7 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Curso de conducción A2.</h4>
-        <a href="A2.html"><img src="img/A2 INFO.png" class="border card-img-top" alt="..."></a>
+        <a href="A2.html"><img src="img/A2.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">El servicio de licencia de conducción categoría A2 te permite conducir 
             motocicletas de alto y bajo cilindraje, tiene un costo total de $895.000 incluye todo el proceso de 
@@ -237,7 +237,7 @@
                <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
                <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
-               <h4 class="copy">© 2014 conducimos.com.co. <br> <a href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
+               <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
              </div>
              <div class="col">
               <div class=" desc-box">
